--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,9 @@
 -include ../config.mk
 include ../default.mk
 
-test:
+LOAD_PATH += -L ../
+
+test: lisp
 	@export MELPA_BASE=$$(mktemp -d) && \
 	$(BATCH) --eval "(progn\
 	(setq package-build--melpa-base \"$$MELPA_BASE\")\
@@ -9,7 +11,7 @@ test:
 	(ert-run-tests-batch-and-exit))" && \
 	rm -rf "$$MELPA_BASE"
 
-demo:
+demo: lisp
 	@export MELPA_BASE=$$(mktemp -d) && \
 	PB_TEST_VERBOSE=true $(BATCH) --eval "(progn\
 	(setq package-build--melpa-base \"$$MELPA_BASE\")\
@@ -17,11 +19,8 @@ demo:
 	(ert-run-tests-batch-and-exit))" && \
 	rm -rf "$$MELPA_BASE"
 
-lisp: package-build-tests.elc
+lisp: $(addprefix ../,$(ELCS)) $(PKG)-tests.elc
 
 %.elc: %.el
 	@printf "Compiling $<\n"
-	@$(BATCH) --eval "(progn\
-	(when (file-exists-p \"$@\")\
-	  (delete-file \"$@\")))" \
-	-f batch-byte-compile $<
+	@$(BATCH) --funcall batch-byte-compile $<
