--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,13 @@ jobs:
       matrix:
         package: [evil, magit, realgud, edts, elpher, which-key-posframe]
     steps:
-    - name: checkout package-build
+    - name: Checkout package-build
       uses: actions/checkout@v6
       with:
         path: package-build
         fetch-depth: 1
 
-    - name: checkout melpa
+    - name: Checkout melpa
       uses: actions/checkout@v5
       with:
         path: melpa
